links mistakes and tables 55-108

--- a/spells/глубокая-темнота.md
+++ b/spells/глубокая-темнота.md
@@ -7,4 +7,6 @@
 |Уровень| Жр 3|
 |Длительность| 1 день/уровень (П)|
 
-Это заклинание действует аналогично заклинанию тьма, за тем лишь исключением, что объект затемненное освещение с радиусом действия 18 м и длится дольше чем заклинание темнота. Заклинание дневной свет внесенное в зону действия заклинания глубокая темнота (или наоборот), поэтому в области доминируют более сильные условия освещения. Контр-заклинанием и рассеивающим заклинанием заклинания глубокая темнота является любое заклинание света, включая дневной свет и свет того же или более высокого уровня.
+Это заклинание действует аналогично заклинанию [тьма](темнота.md), за тем лишь исключением, что объект затемненное освещение с радиусом действия 18 м и длится дольше чем заклинание [темнота](темнота.md). 
+
+Заклинание [дневной свет](дневной-свет.md) внесенное в зону действия заклинания глубокая темнота (или наоборот), поэтому в области доминируют более сильные условия освещения. Контрзаклинанием и рассеивающим заклинанием заклинания глубокая темнота является любое заклинание света, включая [дневной свет](дневной-свет.md) и [свет](свет.md) того же или более высокого уровня.
