--- a/spells/глубокий-сон.md
+++ b/spells/глубокий-сон.md
@@ -7,4 +7,4 @@
 |Уровень| Брд 3, Маг/Чар 3|
 |Диапазон| Ближний (7,5 м+1,5 м/2 ур.)|
 
-Это заклинание действует аналогично заклинанию сон, за тем лишь исклю-чением, что действует на существ с КХП больше 10.
+Это заклинание действует аналогично заклинанию [сон](сон.md), за тем лишь исклю-чением, что действует на существ с КХП больше 10.
