--- a/spells/говорить-с-мертвыми.md
+++ b/spells/говорить-с-мертвыми.md
@@ -13,4 +13,8 @@
 |Спасбросок| Воля нейтрализует; смотрите текст|
 |Устойчивость к Магии| Нет|
 
-Вы дарите мертвецу некое краткое подобие жизни и разума, для того чтобы получить от него ответы на вопросы которые вас интересуют. Вы можете задать один вопрос за каждые два уровня заклинателя. Те вопросы, что вы не успели спросить, или субъект не успел ответить, если заклинание окончилось, потрачены зря. Знания трупа ограничиваются тем, что ему было известно при жизни, включая языки на которых он говорил (если есть). Ответы, как правило, являются сжатыми, малосодержательными или даже повторяющимися. Если мировоззрение существа отличается от вашего то труп может сопротивляться заклинанию пройдя спасбросок Воли, как будто он был бы живой. Если в течение прошлой неделе на трупе применялось аналогичное заклинание, то ваше попытка в любом случае будет обречена на провал. Время прошедшее после смерти существа может быть любым, однако для использования заклинания оно должно сохранится достаточно хорошо, чтобы с ним можно было вести разговор. Поврежденные тела могут отвечать лишь на часть вопросов или давать не полные ответы, однако в любом случае они должны иметь, как минимум рот, для того чтобы сказать хоть что-нибудь. В любом случае данное заклинание не дает вам возможности общаться с самой личностью умершего (так как его душа давно покинула его тело). Вы всего лишь вытягиваете те знания, которые все еще сохранились в мертвом теле. Частично оживленное тело просто хранит в себе отпечаток знаний, которыми некогда обладала обитающая в нем душа. Труп не может запоминать новую информацию, он даже не сможет вспомнить что уже был опрошен кем-то другим до этого. Заклинание не сработает на мертвых, которые были обращены в нежить.
+Вы дарите мертвецу некое краткое подобие жизни и разума, для того чтобы получить от него ответы на вопросы которые вас интересуют. Вы можете задать один вопрос за каждые два уровня заклинателя. Те вопросы, что вы не успели спросить, или субъект не успел ответить, если заклинание окончилось, потрачены зря. Знания трупа ограничиваются тем, что ему было известно при жизни, включая языки на которых он говорил (если есть). Ответы, как правило, являются сжатыми, малосодержательными или даже повторяющимися. Если мировоззрение существа отличается от вашего то труп может сопротивляться заклинанию пройдя спасбросок Воли, как будто он был бы живой. 
+
+Если в течение прошлой неделе на трупе применялось аналогичное заклинание, то ваше попытка в любом случае будет обречена на провал. Время прошедшее после смерти существа может быть любым, однако для использования заклинания оно должно сохранится достаточно хорошо, чтобы с ним можно было вести разговор. Поврежденные тела могут отвечать лишь на часть вопросов или давать не полные ответы, однако в любом случае они должны иметь, как минимум рот, для того чтобы сказать хоть что-нибудь.
+
+В любом случае данное заклинание не дает вам возможности общаться с самой личностью умершего (так как его душа давно покинула его тело). Вы всего лишь вытягиваете те знания, которые все еще сохранились в мертвом теле. Частично оживленное тело просто хранит в себе отпечаток знаний, которыми некогда обладала обитающая в нем душа. Труп не может запоминать новую информацию, он даже не сможет вспомнить что уже был опрошен кем-то другим до этого. Заклинание не сработает на мертвых, которые были обращены в нежить.
