--- a/spells/дезинтеграция.md
+++ b/spells/дезинтеграция.md
@@ -14,4 +14,8 @@
 |Устойчивость к Магии| Да|
 |Волшебный Материальный Компонент| Магнитный железняк и немного пыли.|
 
-Из вашего пальца в указанном направлении исходит тонкий зеленый луч. Для того чтобы попасть, вы должны провести успешную стрелковую касательную атаку. Любое существо, попавшее под действие луча, получает 2d6 повреждений за уровень заклинателя (максимум 40d6). Если под действием заклинания, какое либо существо будет иметь 0 или менее хит-поинтов, то оно будет дезинтегрировано, и оставит после себя лишь горстку пыли. При этом все снаряжение существа сохраняется неповрежденным. При использовании на объекте, луч просто дезинтегрирует всю неживую материю в области 3 м.3. Если объект достаточно больших размеров, то заклинание разрушит лишь его часть. Луч также воздействует на силовые объекты, как например стена силы или неистовая рука Бигби. Однако такие магические эффекты как сфера неуязвимости или поле антимагии противостоят её эффектам. Если существо или объект пройдут успешный спасбросок Стойкости, то они лишь частично поражены и переносят лишь 5d6 пунктов повреждений. Однако если в результате получения этих повреждений количество хит-поинтов существа или объекта снизится до 0 или ниже, оно будет дезинтегрировано. Повреждается за активацию только одна цель, первое поражаемое существо или объект.
+Из вашего пальца в указанном направлении исходит тонкий зеленый луч. Для того чтобы попасть, вы должны провести успешную стрелковую касательную атаку. Любое существо, попавшее под действие луча, получает 2d6 повреждений за уровень заклинателя (максимум 40d6). Если под действием заклинания, какое либо существо будет иметь 0 или менее хит-поинтов, то оно будет дезинтегрировано, и оставит после себя лишь горстку пыли. При этом все снаряжение существа сохраняется неповрежденным. 
+
+При использовании на объекте, луч просто дезинтегрирует всю неживую материю в области 3 м.3. Если объект достаточно больших размеров, то заклинание разрушит лишь его часть. Луч также воздействует на силовые объекты, как например стена силы или неистовая рука Бигби. Однако такие магические эффекты как сфера неуязвимости или поле антимагии противостоят её эффектам.
+
+Если существо или объект пройдут успешный спасбросок Стойкости, то они лишь частично поражены и переносят лишь 5d6 пунктов повреждений. Однако если в результате получения этих повреждений количество хит-поинтов существа или объекта снизится до 0 или ниже, оно будет дезинтегрировано. Повреждается за активацию только одна цель, первое поражаемое существо или объект.
