--- a/spells/диктум.md
+++ b/spells/диктум.md
@@ -14,15 +14,20 @@
 |Устойчивость к Магии| Да|
 
 Все существа не законного типа в зоне действия заклинания подвергаются следующим болезненным эффектам.
-КХП
-Равные уровню
-заклинателя
-Равные уровню
-заклинателя –1
-Равные уровню
-заклинателя –5
-Равные уровню
-заклинателя –10
+| КХП                           | Эффект                               |
+| ----------------------------- | ------------------------------------ |
+| Равные уровню заклинателя     | Оглушен                              |
+| Равные уровню заклинателя –1  | Замедлен, оглушен                    |
+| Равные уровню заклинателя –5  | Парализован, замедлен оглушен        |
+| Равные уровню заклинателя –10 | Убит, замедлен, парализован, оглушен | 
 
-Эффект
-Оглушен Замедлен, оглушен Парализован, замедлен оглушен Убит, замедлен, парализован, оглушен Эффекты могут объединятся и действовать совместно друг с другом. Эффекты не имеют спасбросков.| |Оглушение| Существо теряет способность слышать на 1d4 раунда.| |Замедление| Существо замедляется| так же как при действии заклинания замедление на 2d4 раунда. |Парализация| Существо будет парали-зовано и останется беспомощным в| течении 1d10 минут. |Убийство| Живое существо умирает.| Нежить уничтожается. Более того, если вы находитесь в своем родном плане, то все существа из других планов попавшие под действие заклинания будут мгновенно изгнаны в свой родной план. Изгнанные существа не могут вернуться в течении 24 часов. Этот эффект действует вне зависимости услышали диктум существа или нет. Эффект изгнания имеет возможность нейтрализации через спасбросок Воли со штрафом –4. Существа, чьи КХП выше вашего уровня заклинателя не подвержены действию эффектов заклинания диктум.
+
+Эффекты могут объединятся и действовать совместно друг с другом. Эффекты не имеют спасбросков.
+Оглушение: Существо теряет способность слышать на 1d4 раунда.
+Замедление: Существо замедляется так же как при действии заклинания замедление на 2d4 раунда.
+Парализация: Существо будет парализовано и останется беспомощным в течении 1d10 минут.
+Убийство: Живое существо умирает. Нежить уничтожается.
+
+Более того, если вы находитесь в своем родном плане, то все существа из других планов попавшие под действие заклинания будут мгновенно изгнаны в свой родной план. Изгнанные существа не могут вернуться в течении 24 часов. Этот эффект действует вне зависимости услышали диктум существа или нет. Эффект изгнания имеет возможность нейтрализации через спасбросок Воли со штрафом –4. 
+
+Существа, чьи КХП выше вашего уровня заклинателя не подвержены действию эффектов заклинания диктум.
