--- a/spells/дневной-свет.md
+++ b/spells/дневной-свет.md
@@ -13,4 +13,6 @@
 |Спасброски| Нет|
 |Устойчивость к Магии| Нет|
 
-Объект, к которому прикоснулся заклинатель, начинает излучать дневной свет в радиусе 18 м, и тусклый свет в дополнительных 18 м после базового. Существа, которые переносят штрафы во время пребывания на дневном свете, также переносят их и в зоне действия заклинания. Несмотря на свое название, это заклинание не дает действительного дневного света, который может наносить повреждения или разрушать определенных существ (например, вампиров). Если заклинание было наложено на небольшой объект который потом каким-то образом прикрыли, то эффект будет блокирован до тех пор пока объект снова не будет раскрыт. Заклинание дневной свет внесенное в зону действия любого заклинания эффектом действия, которого является тьма (или наоборот), временно прекращает излучать свет. Контрзаклинанием и рассеивающим заклинанием заклинания дневной свет является любое заклинание темноты того же уровня или выше, как например темнота.
+Объект, к которому прикоснулся заклинатель, начинает излучать дневной свет в радиусе 18 м, и тусклый свет в дополнительных 18 м после базового. Существа, которые переносят штрафы во время пребывания на дневном свете, также переносят их и в зоне действия заклинания. Несмотря на свое название, это заклинание не дает действительного дневного света, который может наносить повреждения или разрушать определенных существ (например, вампиров). Если заклинание было наложено на небольшой объект который потом каким-то образом прикрыли, то эффект будет блокирован до тех пор пока объект снова не будет раскрыт. 
+
+Заклинание дневной свет внесенное в зону действия любого заклинания эффектом действия, которого является тьма (или наоборот), временно прекращает излучать свет. Контрзаклинанием и рассеивающим заклинанием заклинания дневной свет является любое заклинание темноты того же уровня или выше, как например [темнота](темнота.md).
