--- a/spells/добрая-надежда.md
+++ b/spells/добрая-надежда.md
@@ -13,4 +13,5 @@
 |Спасбросок| Воля нейтрализует (безвредно)|
 |Устойчивость к Магии| Да (безвредно)|
 
-Это заклинание вселяет в субъектов сильную надежду. Каждое пораженное заклинанием существо получает +2 бонус морали к спасброскам, броскам атаки, проверкам параметров, навыков, и броскам повреждения оружием. Контр-заклинанием и рассеивающим добрую надежду является заклинание крушащее отчаяние.
+Это заклинание вселяет в субъектов сильную надежду. Каждое пораженное заклинанием существо получает +2 бонус морали к спасброскам, броскам атаки, проверкам параметров, навыков, и броскам повреждения оружием.
+Контрзаклинанием и рассеивающим добрую надежду является заклинание [крушащее отчаяние](крушащее-отчаяние.md).
