--- a/spells/доминирование-над-чудовищем.md
+++ b/spells/доминирование-над-чудовищем.md
@@ -6,4 +6,4 @@
 |Уровень| Маг/Чар 9|
 |Цель| Одно существо|
 
-Это заклинание действует как и доминирование над персоной, за исключением того, что заклинание не ограничено типом существа.
+Это заклинание действует как и [доминирование над персоной](доминирование-над-персоной.md), за исключением того, что заклинание не ограничено типом существа.
