--- a/spells/духовное-оружие.md
+++ b/spells/духовное-оружие.md
@@ -13,35 +13,37 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Да|
 
-Оружие созданное из чистой силы, материализуется в пространстве и атакует ваших врагов на расстоянии, причиняя 1d8 пунктов повреждений +1 пункт за три уровня заклинателя (максимум +5 на 15-м уровне). Оружие приобретает форму того оружия, которое использует ваше божество, или оружие которое имеет определенную духовную или символическую ценность для вас (смотрите ниже). Оно имеет тот же радиус поражения и критические множители, что и реальный образец. Оружие атакует тех врагов, которых вы ему укажете, совершая одну атаку в течение каждого раунда в ваш ход. Оно применяет ваш базовый бонус атаки (возможно применение нескольких атак в последующих раундах), плюс модификатор вашей Мудрости в качестве бонуса атаки. Поскольку это оружие атакует как заклинание, а не как оружие, то оно может повреждать существ имеющих снижение повреждений. Кроме того, силовым оружием, оно может поразить бестелесных существ. Оружие всегда атакует по вашему указанию. Оно не может использовать бонус фланкирования, а также не помогает сражающемуся получить его. Ваши отличительные черты (такие как Фокусировка в Оружие) или боевые действия (например стремительная атака) не могут быть использованы для этого оружия. Если оружие вышло за пределы действия заклинания или за пределы видимости, или вы не отдавали ему приказа, то оно автоматически возвращается и парит неподалеку от вас в ожидании дальнейших указаний. Каждый новый раунд после первого, вы можете перенацелить оружие на другую цель, потратив действие передвижения. Если вы не делаете, этого оружие продолжает атаковать первоначальную цель. Каждый раунд, когда оружие переключается на новую цель, оно получает одну атаку. В последующих раундах оружие может применить множественную атаку, если ваш базовый бонус атаки позволяет ее. Даже в том случае, если духовное оружие является стрелковым, оно все равно использует радиус атаки равный зоне диапазона заклинания, а не оружия, переключение на новую цель также требует одного действия передвижения. Духовное оружие не может быть атаковано или повреждено обычной физической атакой, но рассеивание магии, дезинтеграция, сфера уничтожения, палочка ликвидации могут поразить его. КД оружия против касательных атак равен 12 (10+бонус размера для Крошечных предметов). Если у атакующего существа есть устойчивость к магии, вы проводите проверку уровня заклинателя (1d20+уровень заклинателя) против устойчивости к магии в первую атаку духовного оружия. Если существо противостоит, то заклинание будет рассеяно. Если нет, то оружие будет иметь нормальный эффект на это существо на все время длительности заклинания. Оружие, которое вы получаете в результате действия заклинания, является силовым клоном личного оружия вашего бога, многие из которых имеют свои собственные имена. Жрец не имеющий своего бога, получает оружие в зависимости от его мировоззрения. Жрец с нейтральным мировоззрением и без бога, может создать духовное оружие любого мировоззрения, какое именно мировоззрение будет использовано, зависит от того, чем руководствовался жрец в своих поступках в последнее время и на данный момент в частности.
+Оружие созданное из чистой силы, материализуется в пространстве и атакует ваших врагов на расстоянии, причиняя 1d8 пунктов повреждений +1 пункт за три уровня заклинателя (максимум +5 на 15-м уровне). Оружие приобретает форму того оружия, которое использует ваше божество, или оружие которое имеет определенную духовную или символическую ценность для вас (смотрите ниже). Оно имеет тот же радиус поражения и критические множители, что и реальный образец. Оружие атакует тех врагов, которых вы ему укажете, совершая одну атаку в течение каждого раунда в ваш ход. Оно применяет ваш базовый бонус атаки (возможно применение нескольких атак в последующих раундах), плюс модификатор вашей Мудрости в качестве бонуса атаки. Поскольку это оружие атакует как заклинание, а не как оружие, то оно может повреждать существ имеющих снижение повреждений. Кроме того, силовым оружием, оно может поразить бестелесных существ. Оружие всегда атакует по вашему указанию. Оно не может использовать бонус фланкирования, а также не помогает сражающемуся получить его. Ваши отличительные черты (такие как Фокусировка в Оружие) или боевые действия (например стремительная атака) не могут быть использованы для этого оружия. Если оружие вышло за пределы действия заклинания или за пределы видимости, или вы не отдавали ему приказа, то оно автоматически возвращается и парит неподалеку от вас в ожидании дальнейших указаний.
+
+Каждый новый раунд после первого, вы можете перенацелить оружие на другую цель, потратив действие передвижения. Если вы не делаете, этого оружие продолжает атаковать первоначальную цель. Каждый раунд, когда оружие переключается на новую цель, оно получает одну атаку. В последующих раундах оружие может применить множественную атаку, если ваш базовый бонус атаки позволяет ее. Даже в том случае, если духовное оружие является стрелковым, оно все равно использует радиус атаки равный зоне диапазона заклинания, а не оружия, переключение на новую цель также требует одного действия передвижения. 
+
+Духовное оружие не может быть атаковано или повреждено обычной физической атакой, но рассеивание магии, дезинтеграция, сфера уничтожения, палочка ликвидации могут поразить его. КД оружия против касательных атак равен 12 (10+бонус размера для Крошечных предметов). Если у атакующего существа есть устойчивость к магии, вы проводите проверку уровня заклинателя (1d20+уровень заклинателя) против устойчивости к магии в первую атаку духовного оружия. Если существо противостоит, то заклинание будет рассеяно. Если нет, то оружие будет иметь нормальный эффект на это существо на все время длительности заклинания.
+
+Оружие, которое вы получаете в результате действия заклинания, является силовым клоном личного оружия вашего бога, многие из которых имеют свои собственные имена. Жрец не имеющий своего бога, получает оружие в зависимости от его мировоззрения. Жрец с нейтральным мировоззрением и без бога, может создать духовное оружие любого мировоззрения, какое именно мировоззрение будет использовано, зависит от того, чем руководствовался жрец в своих поступках в последнее время и на данный момент в частности.
 
 Ниже представлен список оружия которое соответствует определенным богам или мировоззрениям.
-|Боккоб| Посох, «Посох Боккоба»|
-|Кореллон Ларесйан| Длинный меч,|
-«Сахандриан»
-|Эхлонна| Длинный лук, «Дженевйер»|
-|Эриснул| Утренняя звезда, «Агония»|
-|Фарланхгун| Посох, «Друг путника”|
-|Гарл Глиттергольд| Боевой Топор,|
-«Арумдина»
-|Груумш| Копье, “Кровавое копье”|
-|Хайрониус| Длинный меч, «Несущий|
-справедливость»
-|Хекстор| Цеп, “Наказатель»|
-|Корд| Двуручный меч, «Кельмар»|
-|Морадин| Боевой молот, «Молот Духа»|
-|Нерулл| Коса, «Резак Душ»|
-|Обад-Хай| Посох, «Прикосновение|
-Бури»
-|Олидаммара| Рапира, «Быстрый удар»|
-|Пелор| Тяжелая булава, «Солнечный|
-Скипетр»
-|Св. Кутберт| Тяжелая булава, «Булава Кутберта»|
-|Векна| Кинжал, «Последняя мысль»|
-|Вии Джас| Кинжал, «Разъеденение»|
-|Йондалла| Короткий меч, «Клинок|
-Рога»
-|Хаос| Боевой топор, «Клинок изме-нений»|
-|Зло| Легкий цеп, «Каратель душ»|
-|Добро| Боевой молот, «Молот Справедливости»|
-|Закон| Длинный меч, «Меч Правды»|
+|                   |                                                |
+| ----------------- | ---------------------------------------------- |
+| Боккоб            | Посох, «Посох Боккоба»                         |
+| Кореллон Ларесйан | Длинный меч, «Сахандриан»                      |
+| Эхлонна           | Длинный лук, «Дженевйер»                       |
+| Эриснул           | Утренняя звезда, «Агония»                      |
+| Фарланхгун        | Посох, «Друг путника”                          |
+| Гарл Глиттергольд | Боевой Топор, «Арумдина»                       |
+| Груумш            | Копье, “Кровавое копье”                        |
+| Хайрониус         | Длинный меч, «Несущий справедливость»          |
+| Хекстор           | Цеп, “Наказатель»                              |
+| Корд              | Двуручный меч, «Кельмар»                       |
+| Морадин           | Боевой молот, «Молот Духа»                     |
+| Нерулл            | Коса, «Резак Душ»                              |
+| Обад-Хай          | Посох, «Прикосновение Бури»                    |
+| Олидаммара        | Рапира, «Быстрый удар»                         |
+| Пелор             | Тяжелая булава, «Солнечный            Скипетр» |
+| Св. Кутберт       | Тяжелая булава, «Булава Кутберта»              |
+| Векна             | Кинжал, «Последняя мысль»                      |
+| Вии Джас          | Кинжал, «Разъеденение»                         |
+| Йондалла          | Короткий меч, «КлинокРога»                     |
+| Хаос              | Боевой топор, «Клинок изме-нений»              |
+| Зло               | Легкий цеп, «Каратель душ»                     |
+| Добро             | Боевой молот, «Молот Справедливости»           |
+| Закон             | Длинный меч, «Меч Правды»                      |
