--- a/spells/заботливый-уход.md
+++ b/spells/заботливый-уход.md
@@ -14,4 +14,6 @@
 |Устойчивость к Магии| Да (объект)|
 |Волшебный Материальный Компонент| Щепотка соли и медная монета на каждый глаз трупа (если они у него есть).|
 
-Вы сохраняете останки умершего так, чтобы они не разлагались. Выполнение этого значительно продлевает ограничение времени для поднятие к жизни умершего (смотрите оживить погибшего). День проведённый под влиянием этого заклинания, не входит во время ограничения. В дополнение, транспортирование погибшего товари-ща более удобное. Заклинание действует также на отрубленные части тела и т.д.
+Вы сохраняете останки умершего так, чтобы они не разлагались. Выполнение этого значительно продлевает ограничение времени для поднятие к жизни умершего (смотрите оживить погибшего). День проведённый под влиянием этого заклинания, не входит во время ограничения. В дополнение, транспортирование погибшего товари-ща более удобное. 
+
+Заклинание действует также на отрубленные части тела и т.д.
