--- a/spells/замешательство-ограниченное.md
+++ b/spells/замешательство-ограниченное.md
@@ -11,4 +11,4 @@
 |Цель| Одно живое существо|
 |Длительность| 1 раунд|
 
-Это заклинание поражает одно су-щество, которое будет в состоянии замешательства в течение 1-го раунда. Смотрите заклинание замешательство, для того чтобы получить более подробную информацию об эффектах вызываемых данным заклинанием.
+Это заклинание поражает одно существо, которое будет в состоянии замешательства в течение 1-го раунда. Смотрите заклинание [замешательство](замешательство.md), для того чтобы получить более подробную информацию об эффектах вызываемых данным заклинанием.
