--- a/spells/запрос.md
+++ b/spells/запрос.md
@@ -9,4 +9,4 @@
 |Устойчивость к Магии| Да|
 |Материальные Компоненты| Небольшой кусочек медной проволоки и небольшая часть самого субъекта – волосы, кусочек ногтя, и т.п.|
 
-Это заклинание действует аналогично заклинанию послание, однако в этом случае послание содержит в себе внушение (смотрите заклинание внушение), которому существо полу-чатель, просто обязано последовать. Успешный спасбросок Воли нейтрализует эффект внушения, однако не может нейтрализовать контакт. Если спасбросок провален, то субъект понимает все, что от него требуется, даже если уровень его параметра Интеллект меньше 1. Если сообщение невозможно понять или оно бессмысленно в соответствии по отношению к субъхекту, послание понято, но внушение неэффективно. В сообщении для существа не должно быть больше 25 слов, включая внушение. Существо может мгновенно дать короткий ответ.
+Это заклинание действует аналогично заклинанию [послание](послание.md), однако в этом случае послание содержит в себе внушение (смотрите заклинание [внушение](принуждение.md)), которому существо получатель, просто обязано последовать. Успешный спасбросок Воли нейтрализует эффект [внушение](принуждение.md), однако не может нейтрализовать контакт. Если спасбросок провален, то субъект понимает все, что от него требуется, даже если уровень его параметра Интеллект меньше 1. Если сообщение невозможно понять или оно бессмысленно в соответствии по отношению к субъекту, послание понято, но внушение неэффективно. В сообщении для существа не должно быть больше 25 слов, включая [внушение](принуждение.md). Существо может мгновенно дать короткий ответ.
