--- a/spells/заточение.md
+++ b/spells/заточение.md
@@ -13,4 +13,4 @@
 |Спасбросок| Воля нейтрализует (смотрите текст)|
 |Устойчивость к Магии| Да|
 
-Когда вы активируете заточение и прикасаетесь к существу, он заключается в маленькую сферу глубоко под поверхностью земли в состоянии приостановленной жизнедеятельности (смотрите временный стазис). Субъект остается там до тех пор, пока на том месте, где его заточили, не будет сактивировано заклинание освобождение. Магический поиск при помощи кристаллического шара, или заклинания определение местонахождения объекта и подобной ворожбы не показывает, что существо заточено в тюрьму, в отличие от распознания местоположения. Заклинание желание или чудо не освобождают реципиента, но указывают где его местонахождение. Если вам известны имя существа и некоторые факты из его жизни, цель переносит при проверке спасброска штраф –4.
+Когда вы активируете заточение и прикасаетесь к существу, он заключается в маленькую сферу глубоко под поверхностью земли в состоянии приостановленной жизнедеятельности (смотрите [временный стазис](временный-застой.md)). Субъект остается там до тех пор, пока на том месте, где его заточили, не будет сактивировано заклинание [освобождение](свобода.md). Магический поиск при помощи кристаллического шара, или заклинания [определение местонахождения объекта](определить-местоположение.md) и подобной ворожбы не показывает, что существо заточено в тюрьму, в отличие от распознания местоположения. Заклинание [желание](желание.md) или [чудо](чудо.md) не освобождают реципиента, но указывают где его местонахождение. Если вам известны имя существа и некоторые факты из его жизни, цель переносит при проверке спасброска штраф –4.
