--- a/spells/дробящая-рука-бигби.md
+++ b/spells/дробящая-рука-бигби.md
@@ -9,4 +9,12 @@
 |Волшебный Материальный Компонент| Скорлупа яйца.|
 |Волшебное Фокусирование| Перчатка из змеиной кожи.|
 
-Это заклинание действует, как и заклинание, промежуточная рука Бигби, за исключением того, что рука способна защищать себя, атаковать или раздавливать одного противника, на которого вы указали. Дробящая рука способна производить захват противника, как и хваткая рука Бигби. Её бонус захвата равен вашему уровню заклинателя+модификатор вашего Интеллекта, Мудрости или Обаяния (соответственно для магов, жрецов, или чародеев), +12 из-за Силы руки – показатель Силы (35), +4 из-за Большого размера. Рука наносит 2d6+12 пунктов повреждений (постоянных, или временных) при каждой успешной проверке захвата противника. Как и промежуточная руки Бигби, дробящая рука Бигби способна защищать себя или применять стремительную атаку против противника как это может сделать неистовая рука Бигби при этом дробящая рука Бигби получает бонус +18 к проверке. Направление заклинания на новую цель считается как действие равное передвижению. Жрецы, которые активируют это заклинание, называют руку в честь своего божества – к примеру, дробящая рука Св. Кутберта.
+Это заклинание действует, как и заклинание, [промежуточная рука Бигби](промежуточная-рука-бигби.md), за исключением того, что рука способна защищать себя, атаковать или раздавливать одного противника, на которого вы указали.
+
+Дробящая рука способна производить захват противника, как и [хваткая рука Бигби](хваткая-рука-бигби.md). Её бонус захвата равен вашему уровню заклинателя+модификатор вашего Интеллекта, Мудрости или Обаяния (соответственно для магов, жрецов, или чародеев), +12 из-за Силы руки – показатель Силы (35), +4 из-за Большого размера. Рука наносит 2d6+12 пунктов повреждений (постоянных, или временных) при каждой успешной проверке захвата противника.
+
+Как и [промежуточная руки Бигби](промежуточная-рука-бигби.md), дробящая рука Бигби способна защищать себя или применять стремительную атаку против противника как это может сделать [неистовая рука Бигби](неистовая-рука-бигби.md) при этом дробящая рука Бигби получает бонус +18 к проверке. 
+
+Направление заклинания на новую цель считается как действие равное передвижению. 
+
+Жрецы, которые активируют это заклинание, называют руку в честь своего божества – к примеру, дробящая рука Св. Кутберта.
