--- a/spells/животное-посланник.md
+++ b/spells/животное-посланник.md
@@ -14,4 +14,8 @@
 |Устойчивость к Магии| Да|
 |Материальные Компоненты| Немного пищи из рациона животного.|
 
-Вы заставляете Крошечное существо идти к тому месту, на которое вы указали. Наиболее часто это заклинание используется, для того чтобы животное доставило послание вашим союзникам. Животное не может быть тренированным, или прирученным кем-то ещё, включая талисманов или животных спутников. Используя не большое количество пищи из рациона животного, вы можете привлечь его или подозвать к себе. Оно слушается или дожидается вашего приказа. Вы умственно воздействуя на животное указываете определенное место, хорошо знаемое вами или местность вокруг вас (к примеру, пик отдаленной горы или устье близлежащей реки). Приказ должен быть не сложным, потому что животное зависит от ваших знаний и не может обойтись без вашего указания. Вы можете прикрепить небольшой объект или записку к посланнику. Затем животное следует к назначенному месту и ждёт, до тех пор, пока заклинание не истечет, после чего животное продолжает свой обычный образ жизни. На протяжении этого периода ожидания, посланник позволяет приближаться к нему и забирать свиток или знак, который оно принесло. Если записка, предназначенная для союзника в виде послания, то птица или другое крошечное животное, могут проигнорировать ваш приказ. Послание, предназначенное вашему союзнику не даёт специальных способностей ему общаться с животным или читать любое послание (к примеру, если он знает этот язык)
+Вы заставляете Крошечное существо идти к тому месту, на которое вы указали. Наиболее часто это заклинание используется, для того чтобы животное доставило послание вашим союзникам. Животное не может быть тренированным, или прирученным кем-то ещё, включая талисманов или животных спутников.
+
+Используя не большое количество пищи из рациона животного, вы можете привлечь его или подозвать к себе. Оно слушается или дожидается вашего приказа. Вы умственно воздействуя на животное указываете определенное место, хорошо знаемое вами или местность вокруг вас (к примеру, пик отдаленной горы или устье близлежащей реки). Приказ должен быть не сложным, потому что животное зависит от ваших знаний и не может обойтись без вашего указания. Вы можете прикрепить небольшой объект или записку к посланнику. Затем животное следует к назначенному месту и ждёт, до тех пор, пока заклинание не истечет, после чего животное продолжает свой обычный образ жизни.
+
+На протяжении этого периода ожидания, посланник позволяет приближаться к нему и забирать свиток или знак, который оно принесло. Если записка, предназначенная для союзника в виде послания, то птица или другое крошечное животное, могут проигнорировать ваш приказ. Послание, предназначенное вашему союзнику не даёт специальных способностей ему общаться с животным или читать любое послание (к примеру, если он знает этот язык)
