--- a/spells/замешательство.md
+++ b/spells/замешательство.md
@@ -16,20 +16,12 @@
 
 Это заклинание вводит существ в состояние замешательства, так что они не в состоянии осознать, что они делают. Бросьте кубики в соответствии с ниже представленной таблицей, чтобы определить, что будет делать каждое из существ в течении данного раунда.
 
-d% Состояние
-01-10 Атакует заклинателя рукопашным
-или стрелковым оружием (или
-приближается к заклинателю, если
-атака не возможна)
-11-20 Действует нормально
-21-50 Ничего не делает кроме
-невнятного бормотания
-51-70 Убегает прочь от заклинателя
-с максимально возможной
-скоростью
-71-100 Атакует ближайшее существо
-(в этом случае талисман
-принимается, как часть самого
-существа и не будет атакован)
+| d%  | Состояние |
+| --- | --------- |
+|01-10| Атакует заклинателя рукопашным или стрелковым оружием (или приближается к заклинателю, если атака не возможна)|
+|11-20| Действует нормально|
+|21-50 |Ничего не делает кроме невнятного бормотания|
+|51-70| Убегает прочь от заклинателя с максимально возможной скоростью|
+|71-100| Атакует ближайшее существо (в этом случае талисман принимается, как часть самого существа и не будет атакован)|
 
 Персонаж в состоянии замешательства, который не может совершать активных действий, просто непонятно бормочет что-то про себя. Атакующее существо в состоянии замешательства не получает никаких особых бонусов против персонажа в замешательстве. Любой персонажа в замешательстве на которого напали, нападет на напавшего на него в следующем ходу, до тех пор пока находится в состоянии замешательства. Отметьте, что персонаж в замешательстве не будет проводить благоприятных атак против существа, против которого он не нацелил свои атаки (или из-за своих большинства предыдущих действий, или потому что на него напали).
