--- a/spells/замок-измерений.md
+++ b/spells/замок-измерений.md
@@ -13,5 +13,7 @@
 |Спасброски| Нет|
 |Устойчивость к Магии| Да|
 
-Вы создаете мерцающий барьер, который полностью блокирует любые путешествия между измерениями. К формам перемещения блокируемым данным заклинаниям относятся астральная проекция, мерцание, дверь измерений, эфирный скачок, эфирность, врата, лабиринт, смещение планов, теневое передвижение, телепорт, а также подобные магические и псионические способности. Если замок измерений был сотворен, то никакие путешествия между измерениями внутрь или извне барьера уже не возможны. Заклинание замок измерений не действует на существ, которые уже пребывают в астральном или эфирном состоянии. Заклинание замок измерений не действует на существ, которые уже пребывают в астральном или эфирном состоянии. Также оно не сможет защитить от таких наблюдения через межизмерения или атак взглядом василиска. Заклинание замок измерений не дает исчезнуть призванным существам до тех пор, пока не пройдет время действия этого заклинания.
+Вы создаете мерцающий барьер, который полностью блокирует любые путешествия между измерениями. К формам перемещения блокируемым данным заклинаниям относятся [астральная проекция](астральная-проекция.md), [мерцание](мерцание.md), [дверь измерений](дверь-измерений.md), [эфирный скачок](эфирный-скачок.md), [эфирность](эфирность.md), [врата](врата.md), [лабиринт](лабиринт.md), [смещение планов](смещение-планов.md), [теневое передвижение](теневое-передвижение.md), [телепорт](телепорт.md), а также подобные магические и псионические способности. Если замок измерений был сотворен, то никакие путешествия между измерениями внутрь или извне барьера уже не возможны. 
+
+Заклинание замок измерений не действует на существ, которые уже пребывают в астральном или эфирном состоянии. Заклинание замок измерений не действует на существ, которые уже пребывают в астральном или эфирном состоянии. Также оно не сможет защитить от таких наблюдения через межизмерения или атак взглядом василиска. Заклинание замок измерений не дает исчезнуть призванным существам до тех пор, пока не пройдет время действия этого заклинания.
 
