--- a/spells/заряд-молнии.md
+++ b/spells/заряд-молнии.md
@@ -14,4 +14,6 @@
 |Устойчивость к Магии| Да|
 |Материальный Компонент| Немного меха и янтарная, кристаллическая или стеклянная палочка.|
 
-Вы выпускаете мощный поток электрической энергии, который причиняет по 1d6 повреждений/уровень заклинателя (максимум 10d6) каждому существу в зоне поражения. Заряд начинается с ваших кончиков пальцев. Заряд молнии воспламеняет горючие вещества и повреждает объекты на пути своего следования. Он может плавить |металлы с низкой температурой плавления, такие как| свинец, золото, серебро,| медь и бронза. Если нанесенные повреждения пробивают и уничтожают барьер, заряд продолжает перемещаться далее, в пределах своего диапазона; в противном случае заряд обрывается у барьера, как и у других магических эффектах.
+Вы выпускаете мощный поток электрической энергии, который причиняет по 1d6 повреждений/уровень заклинателя (максимум 10d6) каждому существу в зоне поражения. Заряд начинается с ваших кончиков пальцев. 
+
+Заряд молнии воспламеняет горючие вещества и повреждает объекты на пути своего следования. Он может плавить металлы с низкой температурой плавления, такие как: свинец, золото, серебро, медь и бронза. Если нанесенные повреждения пробивают и уничтожают барьер, заряд продолжает перемещаться далее, в пределах своего диапазона; в противном случае заряд обрывается у барьера, как и у других магических эффектах.
