--- a/spells/защита-от-закона.md
+++ b/spells/защита-от-закона.md
@@ -6,4 +6,4 @@
 |Тип|Защита [Хаос]|
 |Уровень| Жр 1, Маг/Чар 1, Хаос 1|
 
-Заклинание работает как защита от зла, но дает бонусы отклонения и устойчивости против атак законных существ, и законные призванные существа не могут коснуться существа.
+Заклинание работает как [защита от зла](защита-от-зла.md), но дает бонусы отклонения и устойчивости против атак законных существ, и законные призванные существа не могут коснуться существа.
