--- a/spells/защита-от-хаоса.md
+++ b/spells/защита-от-хаоса.md
@@ -6,4 +6,4 @@
 |Тип|Защита [Закон]|
 |Уровень| Жр 1, Закон 1, Маг/Чар 1, Пал 1|
 
-Заклинание работает как защита от зла, но дает бонусы отклонения и устойчивости от атак хаотичных существ, а хаотичные призванные существа не могут коснуться субъекта.
+Заклинание работает как [защита от зла](защита-от-зла.md), но дает бонусы отклонения и устойчивости от атак хаотичных существ, а хаотичные призванные существа не могут коснуться субъекта.
